# Unprossenial_linkdlen

./: .gitignore  CMakeLists.txt  Candidate.h  Makefile  README.md  Trie.cpp  Trie.h  candidate.cpp  candidate.h  job.cpp  job.h  job_portal  job_portal.cpp  job_portal.h  main.cpp  run.sh
include/: Candidate.h  Trie.h  job.h  job_portal.h
src/: Trie.cpp  candidate.cpp  job_portal.cpp  main.cpp  main_crow.cpp
web/: index.html
